Updated Changes on Hero section and adjusted the spacing

--- a/index.html
+++ b/index.html
@@ -235,6 +235,18 @@
         <div>
           <span><i class="fa-solid fa-circle"></i></span>
         </div>
+        <div>
+          <span><i class="fa-solid fa-circle"></i></span>
+        </div>
+        <div>
+          <span><i class="fa-solid fa-circle"></i></span>
+        </div>
+        <div>
+          <span><i class="fa-solid fa-circle"></i></span>
+        </div>
+        <div>
+          <span><i class="fa-solid fa-circle"></i></span>
+        </div>
       </div>
     </section>
     <script src="./script.js"></script>
