Added New section

--- a/index.html
+++ b/index.html
@@ -233,19 +233,38 @@
       </div>
       <div class="swiper">
         <div>
-          <span><i class="fa-solid fa-circle"></i></span>
+          <span><i class="fa-solid fa-chevron-left arrow"></i></span>
+          <span class="swipe">1</span>
         </div>
         <div>
-          <span><i class="fa-solid fa-circle"></i></span>
+          <span class="swipe">2</span>
         </div>
         <div>
-          <span><i class="fa-solid fa-circle"></i></span>
+          <span class="swipe">3</span>
         </div>
         <div>
-          <span><i class="fa-solid fa-circle"></i></span>
+          <span class="swipe">4</span>
         </div>
         <div>
-          <span><i class="fa-solid fa-circle"></i></span>
+          <span class="swipe">5</span>
+          <span><i class="fa-solid fa-chevron-right arrow"></i></span>
+        </div>
+      </div>
+    </section>
+    <section id="gallery">
+      <h1 class="title-1s">Gallery</h1>
+      <div class="gallery-image">
+        <div class="image-1">
+          <img src="./Assets/Rectangle 10.png" alt="" />
+          <img src="./Assets/Rectangle 11.png" alt="" />
+        </div>
+        <div class="image-2">
+          <img src="./Assets/Rectangle 12.png" alt="" />
+          <img src="./Assets/Rectangle 14.png" alt="" />
+        </div>
+        <div class="image-3">
+          <img src="./Assets/Rectangle 15.png" alt="" />
+          <img src="./Assets/Rectangle 13.png" alt="" />
         </div>
       </div>
     </section>
