--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <p class="naira">&#8358;<b>2,450</b></p>
             </div>
           </div>
-          <div class="product-container">
+          <div class="product-container product-container-1s">
             <div class="product_container-1">
               <img
                 src="./Assets/image-6-2.png"
@@ -169,7 +169,7 @@
               <p class="naira">&#8358;<b>2,450</b></p>
             </div>
           </div>
-          <div class="product-container">
+          <div class="product-container product-container-1s">
             <div class="product_container-1">
               <img
                 src="./Assets/image-6-1.png"
@@ -201,7 +201,7 @@
               <p class="naira">&#8358;<b>2,450</b></p>
             </div>
           </div>
-          <div class="product-container">
+          <div class="product-container product-container-1s">
             <div class="product_container-1">
               <img
                 src="./Assets/image-6-9.png"
