added new setions

--- a/index.html
+++ b/index.html
@@ -271,6 +271,27 @@
           </div>
         </div>
       </section>
+      <section id="contact">
+        <h1 class="title-1s">Contact Us</h1>
+        <div class="contact-card">
+          <img src="./Assets/Rectangle-16.png" alt="map" class="map-pic" />
+          <div class="contact-details">
+            <div class="details">
+              <p>Phone</p>
+              <p><b>+234 9011039271</b></p>
+            </div>
+            <div class="details">
+              <p>Email</p>
+              <p><b>dosamarvis@gmail.com</b></p>
+            </div>
+            <div class="details">
+              <p>Location</p>
+              <p><b>2972 westheimer Rd. Santa Ana, Illinois 85486</b></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer></footer>
     </div>
     <script src="./script.js"></script>
   </body>
