finished full section

--- a/index.html
+++ b/index.html
@@ -291,7 +291,33 @@
           </div>
         </div>
       </section>
-      <footer></footer>
+      <footer>
+        <div class="foot-container">
+          <div class="footer-logo">
+            <img src="./Assets/logo.png" alt="logo-pic" />
+          </div>
+          <div class="location-container">
+            <p class="loc">LOCATION</p>
+            <p>2972 Westheimer Rd. Santa Ana, Illinois 85486</p>
+          </div>
+          <div class="socials">
+            <p class="loc">SOCIAL</p>
+            <p class="media">Facebook</p>
+            <p class="media">Instagram</p>
+            <p class="media">Twitter</p>
+          </div>
+          <div class="links">
+            <p class="loc">LINK</p>
+            <p class="dir">Home</p>
+            <p class="dir">Menu</p>
+            <p class="dir">Gallery</p>
+            <p class="dir">About</p>
+          </div>
+        </div>
+        <p class="copy">
+          Copyright &#169; 2024 Chinemere Chuwkudalu. All Rights Reserved
+        </p>
+      </footer>
     </div>
     <script src="./script.js"></script>
   </body>
