reset map image

--- a/index.html
+++ b/index.html
@@ -274,17 +274,7 @@
       <section id="contact">
         <h1 class="title-1s">Contact Us</h1>
         <div class="contact-card">
-          <div class="google-map">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.42043240019!2d3.3369221735047843!3d6.594553622336641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b92274e35dd4d%3A0x35270c28a1f433fb!2slocal%20government%2C%203%20Oshitelu%20St%2C%20Ikeja%2C%20100212%2C%20Lagos!5e0!3m2!1sen!2sng!4v1725534940028!5m2!1sen!2sng"
-              width="600"
-              height="450"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
-          </div>
+          <img src="./Assets/Rectangle-16.png" alt="map" class="map-pic" />
           <div class="contact-details">
             <div class="details">
               <p>Phone</p>
